Add ensemble regression models (AdaBoost, XGBoost, Stacking) for Boston Housing dataset

--- a/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
+++ b/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
@@ -1144,9 +1144,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9a7828a-2879-430d-9b07-01bb501dd7c7",
+   "metadata": {},
+   "source": [
+    "## Ensemble Regression Models on Boston Housing Dataset\n",
+    "\n",
+    "### Objective\n",
+    "We are predicting the **median value of owner-occupied homes (MEDV)** from the **Boston Housing dataset** using different **ensemble regression methods**:  \n",
+    "- **AdaBoost Regressor**  \n",
+    "- **XGBoost Regressor**  \n",
+    "- **Stacking Regressor (AdaBoost + XGBoost combined with Linear Regression)**  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Code Breakdown\n",
+    "\n",
+    "#### 1. Import Libraries and Dataset\n",
+    "- Libraries:\n",
+    "  - `pandas` and `numpy` → Data handling.\n",
+    "  - `scikit-learn` → Train-test split, regressors, and evaluation.\n",
+    "  - `xgboost` → XGBoost model.\n",
+    "- Dataset:  \n",
+    "  - Loaded using `pd.read_csv('boston_house_prices.csv')`.  \n",
+    "  - Features (`X`) = all columns except **`MEDV`**.  \n",
+    "  - Target (`y`) = **`MEDV`**, which represents median home prices.\n",
+    "\n",
+    "#### 2. Split Data\n",
+    "- Data is divided into **80% training** and **20% testing** using `train_test_split`.  \n",
+    "- Ensures the model is trained on one portion and evaluated on another.  \n",
+    "\n",
+    "#### 3. AdaBoost Regressor\n",
+    "- `AdaBoostRegressor` builds multiple weak learners (small decision trees) sequentially.  \n",
+    "- Each learner focuses on correcting errors made by the previous one.  \n",
+    "- Evaluation metric: **Mean Squared Error (MSE)**.\n",
+    "\n",
+    "#### 4. XGBoost Regressor\n",
+    "- `XGBRegressor` is a powerful boosting algorithm optimized for speed and performance.  \n",
+    "- Similar to AdaBoost but more advanced, handling complex relationships and reducing overfitting.  \n",
+    "- Evaluation metric: **MSE**.\n",
+    "\n",
+    "#### 5. Stacking Regressor\n",
+    "- Combines predictions from multiple models (AdaBoost + XGBoost).  \n",
+    "- Uses **Linear Regression** as the final estimator to blend predictions.  \n",
+    "- Typically improves performance by leveraging strengths of multiple algorithms.  \n",
+    "- Evaluation metric: **MSE**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Output\n",
+    "The code prints **Mean Squared Error (MSE)** for:\n",
+    "- AdaBoost  \n",
+    "- XGBoost  \n",
+    "- Stacking Regressor  \n",
+    "\n",
+    "A **lower MSE** means better predictive performance.\n",
+    "\n",
+    "---\n",
+    "\n",
+    " **Takeaway:**  \n",
+    "- **AdaBoost**: Simple boosting method.  \n",
+    "- **XGBoost**: More advanced boosting with better accuracy and efficiency.  \n",
+    "- **Stacking**: Combines models for potentially the best results.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "47a1706d-6ce4-470c-914f-f9d92fce775b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AdaBoost Mean Squared Error: 13.497653921094228\n",
+      "XGBoost Mean Squared Error: 6.886576583729877\n",
+      "Stacking Mean Squared Error: 6.942873658557199\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import AdaBoostRegressor, StackingRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Create a pandas DataFrame\n",
+    "boston_house_prices = pd.read_csv('boston_house_prices.csv')\n",
+    "\n",
+    "# Assume 'MEDV' is the target column (adjust if necessary)\n",
+    "X = boston_house_prices.drop(columns=['MEDV'])  # All the Features\n",
+    "y = boston_house_prices['MEDV']  # Target\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# AdaBoost\n",
+    "ada_boost = AdaBoostRegressor(n_estimators=50, random_state=42)\n",
+    "ada_boost.fit(X_train, y_train)\n",
+    "ada_boost_pred = ada_boost.predict(X_test)\n",
+    "ada_boost_mse = mean_squared_error(y_test, ada_boost_pred)\n",
+    "print(\"AdaBoost Mean Squared Error:\", ada_boost_mse)\n",
+    "\n",
+    "# XGBoost\n",
+    "xgboost = XGBRegressor(n_estimators=50, random_state=42)\n",
+    "xgboost.fit(X_train, y_train)\n",
+    "xgboost_pred = xgboost.predict(X_test)\n",
+    "xgboost_mse = mean_squared_error(y_test, xgboost_pred)\n",
+    "print(\"XGBoost Mean Squared Error:\", xgboost_mse)\n",
+    "\n",
+    "# Stacking\n",
+    "estimators = [\n",
+    " ('ada_boost', AdaBoostRegressor(n_estimators=50, random_state=42)),\n",
+    " ('xgboost', XGBRegressor(n_estimators=50, random_state=42))\n",
+    "]\n",
+    "stacking = StackingRegressor(estimators=estimators, final_estimator=LinearRegression())\n",
+    "stacking.fit(X_train, y_train)\n",
+    "stacking_pred = stacking.predict(X_test)\n",
+    "stacking_mse = mean_squared_error(y_test, stacking_pred)\n",
+    "print(\"Stacking Mean Squared Error:\", stacking_mse)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a802f9bd-97f4-4d41-a693-7c5c6bb2c257",
+   "id": "d8d5a9f6-dbf7-4d99-9684-1d361f7b5180",
    "metadata": {},
    "outputs": [],
    "source": []
