feat: implement CNN on CIFAR-10 dataset with training history visualization

--- a/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
+++ b/ml_basics_part3 (classification)/ml_basics_part3 _classification.ipynb
@@ -1272,8 +1272,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d8d5a9f6-dbf7-4d99-9684-1d361f7b5180",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.875\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.datasets import make_classification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Generate some synthetic data for demonstration\n",
+    "X, y = make_classification(n_samples=1000, n_features=20, n_classes=2, random_state=42)\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize AdaBoost classifier with a base estimator (e.g., DecisionTreeClassifier)\n",
+    "base_estimator = DecisionTreeClassifier(max_depth=1) # You can choose different base estimators\n",
+    "ada_boost = AdaBoostClassifier(estimator=base_estimator, n_estimators=50, random_state=42)\n",
+    "\n",
+    "# Train the AdaBoost model\n",
+    "ada_boost.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "predictions = ada_boost.predict(X_test)\n",
+    "\n",
+    "# Calculate accuracy\n",
+    "accuracy = accuracy_score(y_test, predictions)\n",
+    "print(\"Accuracy:\", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26fbe9fc-cb98-4027-8e71-6227ba9b4d8c",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "# 🧠 Convolutional Neural Network (CNN) on CIFAR-10\n",
+    "\n",
+    "This code implements a **Convolutional Neural Network (CNN)** using TensorFlow/Keras to classify images from the **CIFAR-10 dataset**.\n",
+    "\n",
+    "### 📌 Steps Explained\n",
+    "\n",
+    "1. **Load Dataset**\n",
+    "\n",
+    "   * CIFAR-10 dataset is loaded using `datasets.cifar10.load_data()`.\n",
+    "   * Images are normalized (divided by 255.0) so pixel values fall between 0–1.\n",
+    "\n",
+    "2. **Build CNN Architecture**\n",
+    "\n",
+    "   * **Conv2D Layer (32 filters, 3x3 kernel, ReLU):** Extracts features from images.\n",
+    "   * **MaxPooling2D (2x2):** Reduces dimensionality while keeping important features.\n",
+    "   * **Conv2D Layers (64 filters):** More feature extraction.\n",
+    "   * **Flatten:** Converts 2D feature maps into 1D vector.\n",
+    "   * **Dense(64, ReLU):** Fully connected layer for learning complex patterns.\n",
+    "   * **Dense(10):** Output layer with 10 units (for 10 CIFAR-10 classes).\n",
+    "\n",
+    "3. **Compile the Model**\n",
+    "\n",
+    "   * Optimizer: `adam`\n",
+    "   * Loss: `SparseCategoricalCrossentropy` (for multi-class classification)\n",
+    "   * Metric: `accuracy`\n",
+    "\n",
+    "4. **Train the Model**\n",
+    "\n",
+    "   * Model trained for **10 epochs** with training and validation data.\n",
+    "\n",
+    "5. **Evaluate Performance**\n",
+    "\n",
+    "   * Accuracy on test set is printed.\n",
+    "\n",
+    "6. **Plot Training History**\n",
+    "\n",
+    "   * Accuracy vs Validation Accuracy is visualized over epochs.\n",
+    "\n",
+    "---\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6803be2b-fa9c-4190-a7af-7655f2fbdf5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-08-24 16:52:21.567507: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
+      "\u001b[1m 40157184/170498071\u001b[0m \u001b[32m━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m5:41\u001b[0m 3us/step"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import datasets, layers, models\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Load and preprocess the dataset\n",
+    "(train_images, train_labels), (test_images, test_labels) = datasets.cifar10.load_data()\n",
+    "train_images, test_images = train_images / 255.0, test_images / 255.0\n",
+    "\n",
+    "# Define the CNN model architecture\n",
+    "model = models.Sequential([\n",
+    " layers.Conv2D(32, (3, 3), activation='relu', input_shape=(32, 32, 3)),\n",
+    " layers.MaxPooling2D((2, 2)),\n",
+    " layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    " layers.MaxPooling2D((2, 2)),\n",
+    " layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    " layers.Flatten(),\n",
+    " layers.Dense(64, activation='relu'),\n",
+    " layers.Dense(10)\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# Train the model\n",
+    "history = model.fit(train_images, train_labels, epochs=10, \n",
+    "                    validation_data=(test_images, test_labels))\n",
+    "\n",
+    "# Evaluate the model\n",
+    "test_loss, test_acc = model.evaluate(test_images, test_labels, verbose=2)\n",
+    "print(\"\\nTest accuracy:\", test_acc)\n",
+    "\n",
+    "# Plot training history\n",
+    "plt.plot(history.history['accuracy'], label='accuracy')\n",
+    "plt.plot(history.history['val_accuracy'], label = 'val_accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.ylim([0, 1])\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb704736-ea6c-44e3-bd7d-65252ee6c3f5",
    "metadata": {},
    "outputs": [],
    "source": []
